Deleted components that did not match my wireframe and created new components + began setting up HomePage

--- a/frontend/src/components/NavBar/NavBar.css
+++ b/frontend/src/components/NavBar/NavBar.css
@@ -9,8 +9,9 @@ li {
 }
 
 .navBar {
-  background: steelblue;
-  box-shadow: 4px 2px 5px gray;
+  background: white;
+  box-shadow: 4px 2px 5px whitesmoke
+  y;
   color: white;
   margin-bottom: 2rem;
   padding: 1.5rem 2rem;
@@ -18,14 +19,14 @@ li {
 
 .navBar button {
   background: transparent;
-  border: 2px solid white;
-  color: white;
+  border: 2px solid green;
+  color: green;
   padding: 0.4rem 0.5rem;
 }
 
 .navBar button:hover {
   background: white;
-  color: steelblue;
+  color: green;
   cursor: pointer;
 }
 
